--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,14 +1,19 @@
 <div class="container mt-3">
   <h1><%= @restaurant.name %> <small><%= @restaurant.address %></small></h1>
   <h2>
-    <%= pluralize(@reviews.size, "review") %>
+    <%= pluralize(@restaurant.reviews.size, "review") %>
   </h2>
-
+  <div class="mb-3">
+    <%= simple_form_for([ @restaurant, @review ]) do |f| %>
+      <%= f.input  :content, as: :text %>
+      <%= f.button :submit, class: 'btn btn-primary' %>
+    <% end %>
+  </div>
   <div id="reviews">
     <% if @restaurant.reviews.blank? %>
       Be the first to leave a review for <%= @restaurant.name %>
     <% else %>
-      <% @reviews.each do |review| %>
+      <% @restaurant.reviews.each do |review| %>
         <p><%= review.content %></p>
       <% end %>
     <% end %>
